src/global/mixins.scss
@import 'mixins/mixins_shadows.scss';
@import 'mixins/mixins_spacing.scss';
@import 'mixins/mixins_a11y.scss';
@import 'mixins/mixins_card.scss';
@import 'mixins/mixins_buttons.scss';
@import 'mixins/mixins_panel.scss';
@import 'mixins/mixins_typo.scss';
@import 'mixins/mixins_grid_layout.scss';

@import 'mixins/mixins_dev_and_debug.scss';

@mixin list-reset {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: inherit;
}

@mixin ellipsis() {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@mixin stretch($property) {
  #{$property}: 100%;
  #{$property}: stretch;
}

@mixin absoluteCenterXY() {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@mixin absoluteCenterX() {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

@mixin absoluteCenterY() {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/** This mixin can be used to avoid spacing problems by inserting an invisible space as pseudo element. */
@mixin zeroWidthSpace() {
  &::before {
    content: '\200B';
    user-select: none;
    width: 0;
    height: 0;
  }
}

@mixin scrollbar($color: 'light', $radius: 0) {
  /* total width */
  &::-webkit-scrollbar {
    width: var(--sbb-spacing-fixed-4x);
  }

  /* background of the scrollbar except button or resizer */
  &::-webkit-scrollbar-track {
    background-color: var(--sbb-color-white-default);

    @if $color == 'dark' {
      background-color: var(--sbb-color-black-default);
    }

    @if $radius != 0 {
      border-radius: $radius;
    }
  }

  &::-webkit-scrollbar-track:hover {
    background-color: var(--sbb-color-white-default);

    @if $color == 'dark' {
      background-color: var(--sbb-color-black-default);
    }
  }

  /* scrollbar itself */
  &::-webkit-scrollbar-thumb {
    background-color: var(--sbb-color-black-alpha-30);
    border: #{px-to-rem-build(7)} solid var(--sbb-color-white-default);
    border-radius: var(--sbb-border-radius-4x);

    @if $color == 'dark' {
      background-color: var(--sbb-color-white-alpha-30);
      border-color: var(--sbb-color-black-default);
    }
  }

  &::-webkit-scrollbar-thumb:hover {
    background-color: var(--sbb-color-black-alpha-60);
    border: #{px-to-rem-build(5.5)} solid var(--sbb-color-white-default);

    @if $color == 'dark' {
      background-color: var(--sbb-color-white-alpha-60);
      border-color: var(--sbb-color-black-default);
    }
  }

  /* set button(top and bottom of the scrollbar) */
  &::-webkit-scrollbar-button {
    display: none;
  }

  /* style for Firefox */
  scrollbar-width: thin;
}

